@@ -1,40 +1,29 @@
 package com.gdsc.mount.metadata.service;
 
-import com.gdsc.mount.common.domain.NodeType;
-import com.gdsc.mount.directory.domain.Directory;
-import com.gdsc.mount.directory.service.DirectoryService;
+
+import com.gdsc.mount.file.dto.FileDeleteRequest;
 import com.gdsc.mount.metadata.domain.Metadata;
-import com.gdsc.mount.metadata.dto.CreateMetadataRequest;
-import com.gdsc.mount.metadata.dto.DeleteFileRequest;
-import com.gdsc.mount.metadata.dto.DownloadFileRequest;
+import com.gdsc.mount.metadata.dto.MetadataCreateRequest;
 import com.gdsc.mount.metadata.dto.MetadataResponse;
 import com.gdsc.mount.metadata.repository.MetadataRepository;
+import com.gdsc.mount.metadata.vo.MetadataCreateValues;
+import java.io.IOException;
+import java.nio.file.NoSuchFileException;
+import java.nio.file.Path;
+import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.lang3.RandomStringUtils;
-import org.springframework.core.io.Resource;
-import org.springframework.core.io.UrlResource;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.StandardCopyOption;
-import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
 public class MetadataService {
+
     private final MetadataRepository metadataRepository;
-    private final DirectoryService directoryService;
 
     public Metadata getMetadatabyId(String id) {
         return metadataRepository.findById(id)
@@ -43,65 +32,40 @@ public class MetadataService {
 
     public List<MetadataResponse> getAllByPage(int page, int size) {
         PageRequest pr = PageRequest.of(page, size);
-        Page<Metadata> fileInfos = metadataRepository.findAll(pr);
-        if (fileInfos.getNumberOfElements() == 0) {
-            fileInfos = Page.empty();
+        Page<Metadata> metadata = metadataRepository.findAll(pr);
+        if (metadata.getNumberOfElements() == 0) {
+            metadata = Page.empty();
         }
-        return fileInfos.stream()
+        return metadata.stream()
                 .map(MetadataResponse::of)
                 .collect(Collectors.toList());
     }
 
-    public String uploadFile(MultipartFile file, CreateMetadataRequest request) throws Exception {
-        Path uploadPath = Paths.get(request.getPath());
-        if (!Files.exists(uploadPath)) {
-            try {
-                Files.createDirectories(uploadPath);
-            } catch (IOException e) {
-                throw new Exception("Failed to create directory.");
-            }
-        }
-        String fileCode = RandomStringUtils.randomAlphanumeric(10);
-        Directory parentDirectory = directoryService.findParentDirectoryByPath(request.getPath());
-
-
-        try (InputStream inputStream = file.getInputStream()) {
-            Path filePath = uploadPath.resolve(fileCode + "-" + request.getPath());
-            Files.copy(inputStream, filePath, StandardCopyOption.REPLACE_EXISTING);
-            metadataRepository.save(new Metadata(fileCode, request.getName(), parentDirectory, request.getPath(), request.isAtRoot(), request.getUsername(), file, "/download/" + fileCode));
-        } catch (IOException e) {
-            throw new IOException("Failed to save file: " + request.getName());
-        }
-        return fileCode;
+    public void createMetadata(MetadataCreateRequest request, MultipartFile file, String fileCode) {
+        Metadata metadata = new Metadata(new MetadataCreateValues(request, file, fileCode));
+        metadataRepository.save(metadata);
     }
 
-    public Resource downloadFile(DownloadFileRequest request) throws IOException {
-
-        Metadata metadata = findByPath(request.getPath());
-        checkFileOwner(request.getUsername(), metadata);
-
-        Path foundFile = Paths.get(request.getPath());
-
-        return new UrlResource(foundFile.toUri());
+    public boolean deleteFile(FileDeleteRequest request, String filePath) throws IOException {
+        Path file = Path.of(filePath);
+        String pathWithFile = request.getPath() + request.getFileName();
+        findByPathIfOwner(request.getUsername(), pathWithFile);
+        metadataRepository.deleteByPathWithFile(pathWithFile);
+        return metadataRepository.existsByPathWithFile(pathWithFile);
     }
 
-    public boolean deleteFile(DeleteFileRequest request) throws IOException {
-        Metadata metadata = findByPath(request.getPath());
-        String pathWithoutTarget = request.getPath().substring(0, request.getPath().lastIndexOf("/"));
-        checkFileOwner(request.getUsername(), metadata);
-        File file = FileUtils.getFile(pathWithoutTarget + metadata.get_id());
-        boolean success = FileUtils.deleteQuietly(file);
-        metadataRepository.deleteById(metadata.get_id());
-        return success;
+    public Metadata findByPathIfOwner(String username, String pathWithFile) throws IOException {
+        Metadata metadata = findByPath(pathWithFile);
+        checkFileOwner(username, metadata);
+        return metadata;
     }
 
-
-    private void checkFileOwner(String username, Metadata metadata) throws IOException {
-        if (!metadata.getUsername().equals(username)) throw new IOException("You are not the owner of this file.");
+    private void checkFileOwner(String username, Metadata metadata) throws NoSuchFileException {
+        if (!metadata.getUsername().equals(username)) throw new NoSuchFileException("No metadata of yours found with given path.");
     }
 
-    public Metadata findByPath(String path) {
-        return metadataRepository.findByPath(path)
+    private Metadata findByPath(String path) {
+        return metadataRepository.findByPathWithFile(path)
                 .orElseThrow(() -> new NoSuchElementException("No metadata found with given path."));
     }
 
